syntax = "proto3";

package proto;

option go_package = "/pb";

service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse) {}
  rpc SeenNotification(SeenNotificationRequest) returns (SeenNotificationResponse) {}
  rpc SeenAllNotifications(SeenAllNotificationsRequest) returns (SeenAllNotificationsResponse) {}
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse) {}
}

message SendNotificationRequest {
  string title = 1;
  string message = 2;
  uint64 recipient = 3;
  uint64 sender = 4;
  string type = 5;
  string avatar = 6;
  string link = 7;
  string link_text = 8;
  string icon = 9;
}

message SendNotificationResponse {
  bool success = 1;
}

message SeenNotificationRequest {
  uint64 id = 1;
}

message SeenNotificationResponse {
  bool success = 1;
}

message SeenAllNotificationsRequest {
  uint64 user_id = 1;
}

message SeenAllNotificationsResponse {
  bool success = 1;
}

message GetNotificationsRequest {
  uint64 user_id = 1;
  uint32 limit = 2;
  uint32 offset = 3;
}

message GetNotificationsResponse {
  bool success = 1;
  repeated Notification notifications = 2;
  uint32 total = 3;
}

message Notification {
  uint64 id = 1;
  string title = 2;
  string message = 3;
  uint64 recipient = 4;
  uint64 sender = 5;
  string type = 6;
  string avatar = 7;
  string link = 8;
  string link_text = 9;
  string icon = 10;
  bool seen = 11;
  string created_at = 12;
}
